# NoteApp_Note_Query_Service

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/models/: mod.rs  note_model.rs
src/services/: kafka_service.rs  mod.rs  mongodb_service.rs  web_server.rs
src/settings/: app_settings.yaml  mod.rs
