[package]
name = "noteApp_note_query_service"
version = "0.1.0"
authors = ["CG <abc@abc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
env_logger = "0.8"
tokio = { version = "1", features = ["full"] }